# MASSIVE

./: .dockerignore  .env.example  .env.local.example  .gitignore  .repomixignore  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.optimized  FACTBOOK_INTEGRATION_COMPLETE.md  FACTBOOK_INTEGRATION_PLAN.md  FACTBOOK_QUICKSTART.md  FACTBOOK_SUMMARY.md  LICENSE  README.md  README_ES.md  api.py  app.py  cache_manager.py  cfc_engine.py  cfc_router.py  cfc_trainer.py  docker-compose.yml  document_intelligence.py  empirical_calibration.py  empirical_config.py  energy_engine.py  energy_runner.py  energy_schemas.py  extended_models.py  i18n.py  index.html  interpreter_layer.py  intervention_optimizer.py  langchain_workflows.py  llm_credentials.py  mamba_engine.py  (+26 more)
.codebuff/: config.json
.github/: Agent_Copilot2  PULL_REQUEST_TEMPLATE.md
BACKLOG_POST_WORKFLOW/: index.html
DOCKER/: index.html
ENV_VARS/: index.html
NAMING_CONVENTIONS/: index.html
OPTIMIZATION_STATUS/: index.html
Pw_hermes_bigPickle/: workflow_summary.txt
README_ES/: index.html
REMEDIATION_STATUS/: index.html
api/: index.html
app/: __init__.py
backend/: __init__.py
benchmarks/: __init__.py  baselines.py  butterfly_diagnostic.py  fidelity.py  io.py  massive_real.py  metrics.py  runner.py  turning_points.py  walk_forward.py
configs/: multilayer.yaml  pvu.yaml
docs/: BACKLOG_POST_WORKFLOW.md  DOCKER.md  ENV_VARS.md  NAMING_CONVENTIONS.md  OPTIMIZATION_STATUS.md  README_ES.md  REMEDIATION_STATUS.md  api.md  index.md  math_physics_extension_plan_ES.md  rust_core_plan_ES.md
experiments/: MASSIVE_BENCHMARK_REPORT.md  TEST_SUMMARY.md  audit_report.md  benchmark_environment.json
forecast/: __init__.py  engine.py  intervention_map.py  scenarios.py  targets.py  (+1 more)
(+312 files in other folders)
