[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "massive"
version = "0.1.0"
description = "MASSIVE simulation toolkit with optional Rust acceleration"
requires-python = ">=3.10"

[tool.maturin]
module-name = "massive_rust_core"
features = ["pyo3/extension-module"]
